--- a/2. Managing Temporary Tablespaces.md
+++ b/2. Managing Temporary Tablespaces.md
@@ -1,5 +1,5 @@
 # Oracle DBA
-## II: Managing Temporary Tablespaces in Oracle
+## I: Managing Temporary Tablespaces in Oracle
 
 ### Create temporary file
 - Temporary tablespace is used for sorting large tables. Every database should have one temporary tablespace.
