--- a/3. Repairing Tablespaces in Oracle.md
+++ b/3. Repairing Tablespaces in Oracle.md
@@ -1,2 +1,3 @@
 # Oracle DBA
-## I: Diagnosing and Repairing Locally Managed Tablespace Problems
+
+## I. Diagnosing and Repairing Locally Managed Tablespace Problems
