--- a/1. Managing Tablespaces And Datafiles.md
+++ b/1. Managing Tablespaces And Datafiles.md
@@ -1,5 +1,5 @@
 # Oracle DBA
-
+- Oracle stores data logically in tablespaces and physically in datafiles associated with the corresponding tablespace
 ## I. Managing Tablespaces And Datafiles
 ### Create tablespace using commandline on windows:
   1. login to sql-plus
@@ -142,4 +142,4 @@ SIZE 50G;
   alter tablespace user online;
   ```
 
-  
+
