--- a/2. Managing Temporary Tablespaces.md
+++ b/2. Managing Temporary Tablespaces.md
@@ -1,5 +1,6 @@
 # Oracle DBA
-## I: Managing Temporary Tablespaces in Oracle
+- Temporary tablespace is used for sorting large tables. Every database should have one temporary tablespace. A temporary tablespace is usually created at the time of Database Creation. However you can also create temporary tablespace afterwards.
+## I. Managing Temporary Tablespaces in Oracle
 
 ### Create temporary file
 - Temporary tablespace is used for sorting large tables. Every database should have one temporary tablespace.
